- Updated the flags of Emerald Acorn to allow every member of a group to loot it.

[2022-05-11]
- Added Broken Shard of Horror to the loot table of Cultist Shard Watcher for the quests Shatter the Shards and Shatter the Shards.
- Added Broken Shard of Despair to the loot table of Cultist Shard Watcher for the quests Shatter the Shards and Shatter the Shards.
- Added Broken Shard of Suffering to the loot table of Cultist Shard Watcher for the quests Shatter the Shards and Shatter the Shards.
- Updated the flags of Broken Shard of Horror to allow every member of a group to loot it.
- Updated the flags of Broken Shard of Despair to allow every member of a group to loot it.
- Updated the flags of Broken Shard of Suffering to allow every member of a group to loot it.

[2022-05-13]
- Added Charred Wreckage to the loot table of Savage Hill Scavenger for the quest Clean Up.
- Updated the flags of Charred Wreckage to allow every member of a group to loot it.

[2022-05-14]
- Added K3 Equipment to the loot table of Sifreldar Storm Maiden for the quest Equipment Recovery.
- Added K3 Equipment to the loot table of Sifreldar Runekeeper for the quest Equipment Recovery.
- Updated the flags of K3 Equipment to allow every member of a group to loot it.
- Updated the respawn time of Sparksocket's Tools.
- Added Hearty Mammoth Meat to the loot table of Ironwool Mammoth for the quest Ample Inspiration.
- Updated the flags of Hearty Mammoth Meat to allow every member of a group to loot it.
- Updated the respawn time of Transporter Power Cell.

[2022-05-21]
- Updated the flags of Lean Wolf Flank to allow every member of a group to loot it.

[2022-05-22]
- Updated the flags of Jungle Remedy to allow every member of a group to loot it.
- Update the respawn time of Kurzen Supplies.
- Updated the respawn time of Fall of Gurubashi.
- Updated the respawn time of The Emperor's Tomb.
- Updated the respawn time of Moon Over the Vale.